--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="dayPrimary">#00B0FF</color>
+    <color name="dayPrimaryDark">#0081CB</color>
+    <color name="dayAccent">#D81B60</color>
+    <color name="dayBackground">@android:color/white</color>
+    <color name="dayWindowBackground">#EEEEEE</color>
+
+    <color name="nightPrimary">#1a237e</color>
+    <color name="nightPrimaryDark">#000051</color>
+    <color name="nightAccent">#8c0032</color>
+    <color name="nightBackground">@android:color/black</color>
+    <color name="nightWindowBackground">#37474f</color>
 </resources>
