--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,13 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Text -->
+    <dimen name="big_text_size">20sp</dimen>
+    <dimen name="normal_text_size">14sp</dimen>
+    <dimen name="small_text_size">12dp</dimen>
+
+    <!-- Margin & Padding & Radius -->
     <dimen name="default_padding">4dp</dimen>
     <dimen name="default_margin">8dp</dimen>
     <dimen name="small_margin">4dp</dimen>
     <dimen name="default_corner_radius">8dp</dimen>
 
-    <dimen name="restaurant_view_height">200dp</dimen>
-    <dimen name="restaurant_view_bottom_offset">60dp</dimen>
+    <!-- Back Button -->
+    <dimen name="back_button_size">40dp</dimen>
 
+    <!-- Restaurant -->
+    <dimen name="restaurant_view_height">200dp</dimen>
+    <dimen name="restaurant_view_bottom_offset">40dp</dimen>
+    <dimen name="restaurant_view_background_height">80dp</dimen>
     <dimen name="restaurant_view_thumbnail_width">80dp</dimen>
     <dimen name="restaurant_view_thumbnail_height">60dp</dimen>
+
+    <!-- Restaurant Discount -->
+    <dimen name="restaurant_discount_view_width">120dp</dimen>
+    <dimen name="restaurant_discount_nb_people_size">60dp</dimen>
+    <dimen name="restaurant_discount_line_height">3dp</dimen>
 </resources>
