--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,10 @@
         <item name="colorSecondary">@color/dayAccent</item>
         <item name="android:colorBackground">@color/dayBackground</item>
         <item name="android:windowBackground">@color/dayWindowBackground</item>
+        <item name="textColor">@color/dayTextColor</item>
+        <item name="textColorSecondary">@color/dayTextColorSecondary</item>
+        <item name="textColorCaption">@color/dayTextColorCaption</item>
+
     </style>
 
     <style name="NightExperiment" parent="@style/ExperimentTheme">
@@ -19,18 +23,72 @@
         <item name="colorSecondary">@color/nightAccent</item>
         <item name="android:colorBackground">@color/nightBackground</item>
         <item name="android:windowBackground">@color/nightWindowBackground</item>
+        <item name="textColor">@color/nightTextColor</item>
+        <item name="textColorSecondary">@color/nightTextColorSecondary</item>
+        <item name="textColorCaption">@color/nightTextColorCaption</item>
     </style>
 
-    <style name="Experiment.Headline6" parent="@style/TextAppearance.MaterialComponents.Headline6">
-        <item name="android:padding">@dimen/default_padding</item>
-        <item name="android:layout_margin">@dimen/small_margin</item>
+    <style name="TextView">
         <item name="android:gravity">center</item>
     </style>
 
-    <style name="Experiment.Caption" parent="@style/TextAppearance.MaterialComponents.Caption">
+    <style name="TextView.Big" parent="TextView">
+        <item name="android:textSize">@dimen/big_text_size</item>
+        <item name="android:textColor">?attr/textColorSecondary</item>
+    </style>
+
+    <style name="TextView.Big.Bold" parent="TextView.Big">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TextView.Normal" parent="TextView">
+        <item name="android:textSize">@dimen/normal_text_size</item>
+        <item name="android:textColor">?attr/textColor</item>
+    </style>
+
+    <style name="TextView.Normal.Bold" parent="TextView.Normal">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TextView.Small" parent="TextView">
+        <item name="android:textSize">@dimen/small_text_size</item>
+        <item name="android:textColor">?attr/textColorCaption</item>
+    </style>
+
+    <style name="TextView.Small.Bold" parent="TextView.Small">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="SpacedTextView" parent="TextView">
         <item name="android:padding">@dimen/default_padding</item>
         <item name="android:layout_margin">@dimen/small_margin</item>
-        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="SpacedTextView.Big" parent="SpacedTextView">
+        <item name="android:textSize">@dimen/big_text_size</item>
+        <item name="android:textColor">?attr/textColorSecondary</item>
+    </style>
+
+    <style name="SpacedTextView.Big.Bold" parent="SpacedTextView.Big">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="SpacedTextView.Normal" parent="SpacedTextView">
+        <item name="android:textSize">@dimen/normal_text_size</item>
+        <item name="android:textColor">?attr/textColor</item>
+    </style>
+
+    <style name="SpacedTextView.Normal.Bold" parent="SpacedTextView.Normal">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="SpacedTextView.Small" parent="SpacedTextView">
+        <item name="android:textSize">@dimen/small_text_size</item>
+        <item name="android:textColor">?attr/textColorCaption</item>
+    </style>
+
+    <style name="SpacedTextView.Small.Bold" parent="SpacedTextView.Small">
+        <item name="android:textStyle">bold</item>
     </style>
 
 </resources>
