--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,6 +18,7 @@
         android:id="@+id/rw_restaurant"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layoutAnimation="@anim/recycler_view_animation"
         android:scrollbarAlwaysDrawVerticalTrack="true"
         android:scrollbars="vertical"
         app:layout_constraintEnd_toEndOf="parent"
