--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,12 +7,13 @@
 
     <!-- Margin & Padding & Radius -->
     <dimen name="default_padding">4dp</dimen>
+    <dimen name="big_margin">16dp</dimen>
     <dimen name="default_margin">8dp</dimen>
     <dimen name="small_margin">4dp</dimen>
     <dimen name="default_corner_radius">8dp</dimen>
 
     <!-- Back Button -->
-    <dimen name="back_button_size">40dp</dimen>
+    <dimen name="back_button_size">30dp</dimen>
 
     <!-- Restaurant -->
     <dimen name="restaurant_view_height">200dp</dimen>
