--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,7 +7,6 @@
 
     <!-- Margin & Padding & Radius -->
     <dimen name="default_padding">4dp</dimen>
-    <dimen name="big_margin">16dp</dimen>
     <dimen name="default_margin">8dp</dimen>
     <dimen name="small_margin">4dp</dimen>
     <dimen name="default_corner_radius">8dp</dimen>
@@ -15,12 +14,18 @@
     <!-- Back Button -->
     <dimen name="back_button_size">30dp</dimen>
 
+    <!-- General -->
+    <dimen name="big_icon_size">50dp</dimen>
+    <dimen name="icon_size">30dp</dimen>
+
     <!-- Restaurant -->
     <dimen name="restaurant_view_height">200dp</dimen>
     <dimen name="restaurant_view_bottom_offset">40dp</dimen>
     <dimen name="restaurant_view_background_height">80dp</dimen>
     <dimen name="restaurant_view_thumbnail_width">80dp</dimen>
     <dimen name="restaurant_view_thumbnail_height">60dp</dimen>
+    <dimen name="restaurant_view_down_translation">16dp</dimen>
+    <dimen name="restaurant_view_up_translation">-16dp</dimen>
 
     <!-- Restaurant Discount -->
     <dimen name="restaurant_discount_view_width">120dp</dimen>
